--- a/startpage/templates/startpage/home.html
+++ b/startpage/templates/startpage/home.html
@@ -43,7 +43,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#songdo">Songdo</a></li>
-								<li><a href="/">Sinchon</a></li>
+								<li><a href="{% url 'posthome' %}">Sinchon</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -55,14 +55,14 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="{% static 'startpage/images/pic01.jpg' %}" alt="" /></span> 
+								<span class="image main"><img src="{% static 'startpage/images/logo.png' %}" alt="" /></span> 
 								<!--여기 이미지에 로고 넣거나 아니면 우리들의 사진을 넣거나 ! -->
 								<p class="b">연세대학교 유일무이 분실물 플랫폼 Yonsei Lost & Found, YLF입니다. 연세대학교에서 잃어버린 물건들을 최대한 빠르고 효율적으로 찾을 수 있도록 하는 통일된 플랫폼으로서, 분실물 현황 업데이트 뿐만 아니라 직접적인 글 작성과 검색을 통해 분실물을 되찾을 수 있는 방법을 연구 중에 있습니다.</p>
 								<p>Yonsei Lost & Found Avengers<br>
-									강동진 (Dongjin Kang) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a>
-									김세정 (Sejung Kim) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a>
-									신희주 (heejoo Shin) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a>
-									이다현 (Dahyun Lee) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a>
+									강동진 (Dongjin Kang) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a><br>
+									김세정 (Sejung Kim) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a><br>
+									신희주 (heejoo Shin) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a><br>
+									이다현 (Dahyun Lee) <a href="https://www.instagram.com/farmer.ssevely/" class="icon fa-instagram"></a><br>
 								</p>
 							</article>
 
