--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="">YLF</a>
+    <a class="navbar-brand" href="{% url 'home' %}">YLF</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'posthome' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         {% if user.is_authenticated %}
         <li class="nav-item">
