hi 0528 modify blog

--- a/blog/templates/blog/new.html
+++ b/blog/templates/blog/new.html
@@ -107,8 +107,9 @@
                 </div>
                 
                 <div class="wrap-input100 validate-input">
-                        <span class="label-input100">분실물 사진: </span>
-                  <input type="file" id="image">
+                    <span class="label-input100">분실물 사진: </span>
+                    <input type="file" name="image">
+                    <span class="focus-input100"></span>
                 </div>
 				<div class="container-contact100-form-btn">
 					<!-- <button class="contact100-form-btn" type="submit">
