--- a/blog/templates/blog/new.html
+++ b/blog/templates/blog/new.html
@@ -32,6 +32,9 @@
 
         background-position: center center;
         }
+        .contact100-form-title {
+            background-image: url("{% static 'images/bg-01.jpg' %}")
+        }
     </style>
 </head>
 <body>
@@ -40,7 +43,7 @@
 	<div class="container-contact100">
 
 		<div class="wrap-contact100">
-			<div class="contact100-form-title" style="background-image: url(../static/images/bg-01.jpg);">
+			<div class="contact100-form-title">
 				<span class="contact100-form-title-1">
 					글쓰기
 				</span>
@@ -49,7 +52,7 @@
 					분실물 내용을 작성해주세요 :-)
 				</span>
 			</div>
-            <form class = "contact100-form validate-form" action="{% url 'new' %}" method="POST">{% csrf_token %}
+            <form class = "contact100-form validate-form" action="{% url 'new' %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
     			<div class="wrap-input100 validate-input" data-validate="제목을 작성해주세요">
                     <span class="label-input100">글 제목:</span>
                     <input class="input100" type="text" name="title">
@@ -100,16 +103,15 @@
                     <span class="focus-input100"></span>
                 </div>
             
-                <div class="wrap-input100 validate-input">
+                <div class="wrap-input100 validate-input" data-validate="내용을 입력해주세요!">
                         <span class="label-input100">글 내용:</span>
                         <textarea class="input100" name="content"></textarea>
                         <span class="focus-input100"></span>
                 </div>
                 
                 <div class="wrap-input100 validate-input">
-                    <span class="label-input100">분실물 사진: </span>
-                    <input type="file" name="image">
-                    <span class="focus-input100"></span>
+                        <span class="label-input100">분실물 사진:</span>
+                  <input type="file" name="image" accept="image/*">
                 </div>
 				<div class="container-contact100-form-btn">
 					<!-- <button class="contact100-form-btn" type="submit">
@@ -118,9 +120,15 @@
 							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 						</span>
                     </button> -->
-                    <input type="submit" class="btn btn-dark" value="Submit!">
-				</div>
-			</form>
+                    <input type="submit" class="contact100-form-btn" value="Submit!">
+                </div>
+                
+                <div class="container mt-5">
+                    <a href="{% url 'posthome' %}" align="middle">홈으로 돌아가기</a>
+                </div>
+                
+            </form>
+            
 		</div>
 	</div>
 
