--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -54,11 +54,11 @@
           <a class="nav-link" href="{% url 'new' %}">글쓰기</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
         {% else %}
         <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         {% endif %}
       </ul>
