--- a/startpage/templates/startpage/home.html
+++ b/startpage/templates/startpage/home.html
@@ -27,7 +27,13 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
-					<button type="button" class="btn btn-secondary" style="margin-left: 1200px"><a href="/">Login</a></button>
+					<button type="button" class="btn btn-secondary" style="margin-left: 1200px">
+						{% if user.is_authenticated %}
+						<a href="{% url 'logout' %}">Logout</a>
+						{% else %}
+						<a href="{% url 'login' %}">Login</a>
+						{% endif %}
+					</button>
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
