blog app template change

--- a/blog/templates/blog/oldnew.html
+++ b/blog/templates/blog/oldnew.html
@@ -11,3 +11,16 @@
 </div>
 {% endblock%} -->
 
+<!-- {% extends 'blog/base.html' %}
+{% block contents %}
+<div class="container mt-5">
+    <h1>Edit Page</h1>
+    <form method= "POST" enctype='multipart/form-data'>{% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" class="btn btn-dark" value='Edit!'>
+    </form>
+</div>
+{% endblock%} -->
+
+
+
