password 변경 등 추가

--- a/loginout/templates/loginout/changepassword.html
+++ b/loginout/templates/loginout/changepassword.html
@@ -17,6 +17,14 @@
         
         <!------ Include the above in your HEAD tag ---------->
         <body>
+            {% for message in messages %}
+            <div class="alert alert-success">
+                <a class="close" href="#" data-dismiss="alert">×</a>
+
+                {{ message }}
+
+            </div>
+            {% endfor %}
         <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
@@ -28,7 +36,7 @@
                             <div class="panel-body">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <form id="login-form" action="{% url 'changepassword' %}" method="post" role="form" style="display: block;">
+                                        <form id="login-form" action="{% url 'changepassword' user.pk %}" method="post" role="form" style="display: block;">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <input type="password" name="newpassword1" id="newpassword1" tabindex="1" class="form-control" placeholder="New Password">
