--- a/loginout/templates/loginout/signup.html
+++ b/loginout/templates/loginout/signup.html
@@ -10,6 +10,14 @@
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>    
     </head>
 <body>
+    {% for message in messages %}
+    <div class="alert alert-success">
+        <a class="close" href="#" data-dismiss="alert">×</a>
+
+        {{ message }}
+
+    </div>
+    {% endfor %}
     
 
 <h2 align="middle">Sign Up!</h2>
