--- a/loginout/templates/loginout/findpassword.html
+++ b/loginout/templates/loginout/findpassword.html
@@ -17,6 +17,14 @@
         
         <!------ Include the above in your HEAD tag ---------->
         <body>
+            {% for message in messages %}
+            <div class="alert alert-success">
+                <a class="close" href="#" data-dismiss="alert">×</a>
+
+                {{ message }}
+
+            </div>
+            {% endfor %}
         <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
