--- a/blog/static/styles/main_styles.css
+++ b/blog/static/styles/main_styles.css
@@ -556,7 +556,7 @@ section
 	width: 100%;
 	height: 100vh;
 }
-.home_slider_container
+.home_slider
 {
 	width: 100%;
 	height: 100%;
@@ -592,7 +592,7 @@ section
 {
 	color: #ffa37b;
 }
-.home_slider .slide
+.home_fisrt .slide
 {
 	background: #0f0e24;
 }
