--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -73,11 +73,10 @@
                 <div class="home_content text-center">
                     <div class="home_title">YLF Search</div>
                     <div class="booking_form_container">
-                        <form method="POST" action="{% url 'result' %}" class="booking_form">
-                            {% csrf_token %}
+                        <form method="GET" action="{% url 'result' %}" class="booking_form">
                             <div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
                                 <div class="booking_input_container d-flex flex-lg-row flex-column align-items-start justify-content-start">
-                                <select name="item_type" class="booking_input booking_input_container" required="required">
+                                <select name="keyword1" class="booking_input booking_input_container" required="required">
                                             <option value="필기류" style="color: black">필기류</option>
                                             <option value="지갑" style="color: black">지갑</option>
                                             <option value="전자기기" style="color: black">전자기기</option>
@@ -85,13 +84,11 @@
                                             <option value="신분증/카드" style="color: black">신분증/카드</option>
                                             <option value="기타" style="color: black">기타</option>
                                 </select>
-                                <select name="found_place" class="booking_input booking_input_container" style="margin-left: 20px" required="required">
-                                    <script>
-                                            var c = [('경영관', '경영관'), ('공학원', '공학원'), ('공A', '제1공학관'), ('공B', '제2공학관'), ('공C', '제3공학관'), ('과학관', '과학관'), ('과학원', '과학원'), ('광복관', '광복관'), ('교육과학관', '교육과학관'), ('대강당', '대강당'), ('대우관', '대우관'), ('무악1학사', '무악1학사'), ('무악2학사', '무악2학사'), ('무악3학사', '무악3학사'), ('무악4학사', '무악4학사'), ('미우관', '미우관'), ('백양관', '백양관'), ('백양누리', '백양누리'), ('백주년기념관', '백주년기념관'), ('빌링슬리관', '빌링슬리관'), ('삼', '삼성관'), ('상남경영원', '상남경영원'), ('성암관', '성암관'), ('스팀슨관', '스팀슨관'), ('스포츠과학관', '스포츠과학관'), ('신학관', '신학관'), ('아펜젤러관', '아펜젤러관'), ('알렌관', '알렌관'), ('언더우드관', '언더우드관'), ('연희관', '연희관'), ('외솔관', '외솔관'), ('우정원', '우정원'), ('운동선수기숙사', '운동선수기숙사'), ('위당관', '위당관'), ('음악관', '음악관'), ('중앙도서관', '중앙도서관'), ('청송대', '청송대'), ('체육관', '체육관'), ('학생회관', '학생회관'), ('학술정보원', '학술정보원'), ('한경관', '한경관')]
-                                            for(i=0; i<41; i++) {
-                                                document.write('<option value="+c[i]+" style="color: black">'+c[i]+"</option>")
-                                            }
-                                    </script>
+                                <select name="keyword2" class="booking_input booking_input_container" style="margin-left: 20px" required="required">
+                                    options = ['경영관', '공학원', '공A', '공B', '공C','과학관', 과학원', '광복관','교육과학관','대강당', '대우관', '무악1학사', '무악2학사', '무악3학사', '무악4학사', '미우관', '백양관', '백양누리', '백주년기념관', '빌링슬리관', '삼성관', '상남경영원', '성암관', '스팀슨관', '스포츠과학관', '신학관', '아펜젤러관', '알렌관', '언더우드관', '연희관', '외솔관', '우정원', '운동선수기숙사','위당관', '음악관', '중앙도서관', '청송대', '체육관', '학생회관', '학술정보원', '한경관']
+                                    {% for option in options %}
+                                        <option value="{{option}}" style="color: black">"{{option}}"</option>
+                                    {% endfor %}
                                 </select>
                                 <div><button class="booking_button trans_200" style="margin-left: 30px">Search Now</button></div>
                             </div>
